--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-:root {
-  font-size: 1rem;
-}
+/*:root {
+  font-size: 1.5rem;
+}*/
 
 * {
   margin: 0 auto;
@@ -8,13 +8,13 @@
 
 body {
   background-color: #00243D;
-  height: 50vh;
+  max-height: 50vh;
   font-family: 'Exo 2', sans-serif;
 }
 
 header {
   background-color: black;
-  height: 8rem;
+  height: 20%;
   width: 100%;
 }
 
@@ -41,8 +41,12 @@ nav {
   background-color: gray;
   display: flex;
   height: auto;
-  justify-content: center;
+  justify-content: space-around;
   line-height: 0;
+}
+
+ul h3 {
+  font-size: 1.6rem;
 }
 
 ul.dropdown-content {
@@ -58,6 +62,8 @@ li {
 }
 
 .weather h2 {
+  color: white;
+  font-size: 3rem;
   text-align: center;
 }
 
@@ -71,8 +77,8 @@ ul.dropdown-content.select-dropdown li span {
 .weather-flex {
   color: #717171;
   display: flex;
-  justify-content: space-between;
   text-align: center;
+  width: 50%;
 }
 
 .carousel {
@@ -104,16 +110,16 @@ ul.dropdown-content.select-dropdown li span {
 
 
 @media only screen and (max-width: 965px) {
-  /*:root {
+  :root {
     font-size: 1.2rem;
-  }*/
+  }
 }
 
 @media only screen and (max-width: 560px) {
 
-  /*:root {
-    font-size: 4rem;
-  }*/
+ :root {
+    font-size: 1rem;
+  }
 
   body {
     height: 100vh;
@@ -121,8 +127,12 @@ ul.dropdown-content.select-dropdown li span {
   }
 
   header {
-    height: 15%;
+    height: 25%;
   }
+
+  /*header p {
+    font-size: 2rem;
+  }*/
 
   h2 {
     font-size: 2.0rem;
@@ -141,5 +151,9 @@ ul.dropdown-content.select-dropdown li span {
 
   .weather {
     height: 30%;
+  }
+
+  .weather-flex {
+    width: 80%;
   }
 }
